--- a/view/about-project.html
+++ b/view/about-project.html
@@ -6,7 +6,7 @@
 
     <meta
       name="description"
-      content="ილიას სახელმწიფო უნივერსიტეტის ონლაინ ბიბლიოთეკა, რომელიც საშუალებას გაძლევთ წაიკითხოთ და გამოიკვლიოთ ილია ჭავჭავაძის წიგნები და სხვა რესურსები."
+      content="ილიას სახელმწიფო უნივერსიტეტის ონლაინ ბიბლიოთეკა"
     />
     <meta
       name="keywords"
@@ -49,222 +49,136 @@
       </div>
     </header>
 
-    <main>
+    <main class="about-main">
       <div class="landing-photo-wrapper">
         <img
           src="../assets/about-project-page/landing-photo.jpg"
+          class="landing-photo"
           alt="landing-photo"
         />
-        <!-- class="landing-photo" -->
       </div>
+      <div class="main-content-wrapper">
+        <section class="about-project-section">
+          <h2>პროექტის შესახებ</h2>
+          <article>
+            <p>
+              ილია ჭავჭავაძის გამომცემლობის ვებ-გვერდი, სახელწოდება და ქვედა
+              ტექსტი: ილია ჭავჭავაძის გამომცემლობის ვებ-გვერდი - არის ონლაინ
+              ბიბლიოთეკა, რომელშიც თავმოყრილი იქნება ილია ჭავჭავაძის წიგნები.
+              ონლაინ წიგნების საცავი საშუალებას მისცემს უნივერსიტეტში არსებულ
+              მკლევარებს, სტუდენტებსა და პროფესორებს, რომ წაიკითხონ, გაეცნონ და
+              გამოიკვლიონ, ილია ჭავჭავაძის წიგნები და სამომავლოდ დაემატება,
+              ნათარგმნები, ხელწერები, ჟურნალები, წერილები და ა.შ. ონლაინ
+              ბიბლიოთეკა იქნება ელექტრონული საცავი, რომელიც გაამარტივებს წვდომას
+              ილია ჭავჭავაძის რესურსებთან.
+            </p>
+            <p>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
+              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
+              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ კვამლს
+              ავტოგრაფების ცხოველურის მოდისო მიუსაფარ მოღუნა ავისმომასწავებლად
+              ნანობდა. გაიფრენდნენ დავსთრგუნო დაყრდნობილი ილო ხიზნობა,
+              შევმძვრალვარ ირგვლივაც არჩილი დაიხრჩო ვვიფიქრებ გადმომხობოდა
+              ავისმომასწავებლად დასკვნით სდუმდნენ.
+            </p>
+          </article>
+        </section>
 
-      <section class="about-project-section">
-        <h2>პროექტის შესახებ</h2>
-        <article>
-          <p>
-            ილია ჭავჭავაძის გამომცემლობის ვებ-გვერდი, სახელწოდება და ქვედა
-            ტექსტი: ილია ჭავჭავაძის გამომცემლობის ვებ-გვერდი - არის ონლაინ
-            ბიბლიოთეკა, რომელშიც თავმოყრილი იქნება ილია ჭავჭავაძის წიგნები.
-            ონლაინ წიგნების საცავი საშუალებას მისცემს უნივერსიტეტში არსებულ
-            მკლევარებს, სტუდენტებსა და პროფესორებს, რომ წაიკითხონ, გაეცნონ და
-            გამოიკვლიონ, ილია ჭავჭავაძის წიგნები და სამომავლოდ დაემატება,
-            ნათარგმნები, ხელწერები, ჟურნალები, წერილები და ა.შ. ონლაინ
-            ბიბლიოთეკა იქნება ელექტრონული საცავი, რომელიც გაამარტივებს წვდომას
-            ილია ჭავჭავაძის რესურსებთან.
-          </p>
-          <p>
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-            სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-            უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ კვამლს
-            ავტოგრაფების ცხოველურის მოდისო მიუსაფარ მოღუნა ავისმომასწავებლად
-            ნანობდა. გაიფრენდნენ დავსთრგუნო დაყრდნობილი ილო ხიზნობა,
-            შევმძვრალვარ ირგვლივაც არჩილი დაიხრჩო ვვიფიქრებ გადმომხობოდა
-            ავისმომასწავებლად დასკვნით სდუმდნენ.
-          </p>
-        </article>
-      </section>
-
-      <section class="instructions-page">
-        <h2>ინსტრუქციები პლატფორმის გამოყენების შესახებ</h2>
-        <ul>
-          <li>
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-            სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-            უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
-          </li>
-          <li>
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-            სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-            უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
-          </li>
-          <li>
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-            სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-            უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
-          </li>
-          <li>
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-            სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-            უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
-          </li>
-        </ul>
-      </section>
-
-      <section class="funds-section">
-        <h2>ფონდები</h2>
-        <article>
-          <p>
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-            სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-            უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ კვამლს
-            ავტოგრაფების ცხოველურის მოდისო მიუსაფარ მოღუნა ავისმომასწავებლად
-            ნანობდა. გაიფრენდნენ დავსთრგუნო დაყრდნობილი ილო ხიზნობა,
-            შევმძვრალვარ ირგვლივაც არჩილი დაიხრჩო ვვიფიქრებ გადმომხობოდა
-            ავისმომასწავებლად დასკვნით სდუმდნენ. ხიზნობა გამაცინოს გადმომხობოდა
-            მოდისო ვერსი ირგვლივაც. ჰჩემობდა მოდისო ყველაფერიო რომანის
-            ავტოგრაფების ესთეტიკურად კანს ვაჟკაცები. ნაბოძებ ვაჟკაცები გაშინებ
-            ავტოგრაფების მოღუნა ხრეშს უარჰყო შენათვალი საწყალო სდუმდნენ
-            ყველაფერიო დაპირისპირებულმა.
-            <br />
-            ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით მქვია
-            შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-            გამოუშვებდა უმძიმდა ფილტვებით.
-          </p>
-        </article>
-      </section>
-
-      <section class="contacts-section">
-        <h2>საკონტაქტო ინფორმაცია</h2>
-        <div>
+        <section class="instructions-page">
+          <h2>ინსტრუქციები პლატფორმის გამოყენების შესახებ</h2>
           <ul>
             <li>
-              <img src="../assets/phone-icon--blue.svg" alt="" />
-              <a href="tel:(+995-32)222-00-09">(+995 32) 222 00 09</a>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
+              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
+              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
             </li>
             <li>
-              <img src="../assets/email-icon--blue.svg" alt="" />
-              <a href="mail:info@iliauni@edu.ge">info@iliauni@edu.ge</a>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
+              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
+              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
             </li>
             <li>
-              <img src="../assets/location-icon--blue.svg" alt="" />
-              <a href="">ქაქუცა ჩოლოყაშვილის 3/5</a>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
+              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
+              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
             </li>
             <li>
-              <img src="../assets/facebook-icon--blue.svg" alt="" />
-              <a href="">www.facebook.com/linki</a>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
+              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
+              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ
             </li>
           </ul>
+        </section>
 
-          <img src="../assets/location.jpg" alt="" />
-        </div>
-      </section>
+        <section class="funds-section">
+          <h2>ფონდები</h2>
+          <article>
+            <p>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
+              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
+              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ კვამლს
+              ავტოგრაფების ცხოველურის მოდისო მიუსაფარ მოღუნა ავისმომასწავებლად
+              ნანობდა. გაიფრენდნენ დავსთრგუნო დაყრდნობილი ილო ხიზნობა,
+              შევმძვრალვარ ირგვლივაც არჩილი დაიხრჩო ვვიფიქრებ გადმომხობოდა
+              ავისმომასწავებლად დასკვნით სდუმდნენ. ხიზნობა გამაცინოს
+              გადმომხობოდა მოდისო ვერსი ირგვლივაც. ჰჩემობდა მოდისო ყველაფერიო
+              რომანის ავტოგრაფების ესთეტიკურად კანს ვაჟკაცები. ნაბოძებ ვაჟკაცები
+              გაშინებ ავტოგრაფების მოღუნა ხრეშს უარჰყო შენათვალი საწყალო
+              სდუმდნენ ყველაფერიო დაპირისპირებულმა.
+            </p>
+            <p>
+              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
+              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
+              გამოუშვებდა უმძიმდა ფილტვებით.
+            </p>
+          </article>
+        </section>
 
-      <section class="team--section">
-        <div>
-          <ul>
-            <li>
-              <article>
-                <img
-                  src="../assets/about-project-page/member.jpg"
-                  alt="Team Member Photo"
-                />
-                <div>
-                  <h4>სახელი გვარი</h4>
-                  <p>პოზიცია</p>
-                  <a
-                    href="https://linkedin.com/in/example"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <img
-                      src="../assets/linkedIn-icon--blue.svg"
-                      alt="LinkedIn Icon"
-                    />LinkedIn
-                  </a>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article>
-                <img
-                  src="../assets/about-project-page/member.jpg"
-                  alt="Team Member Photo"
-                />
-                <div>
-                  <h4>სახელი გვარი</h4>
-                  <p>პოზიცია</p>
-                  <a
-                    href="https://linkedin.com/in/example"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <img
-                      src="../assets/linkedIn-icon--blue.svg"
-                      alt="LinkedIn Icon"
-                    />LinkedIn
-                  </a>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article>
-                <img
-                  src="../assets/about-project-page/member.jpg"
-                  alt="Team Member Photo"
-                />
-                <div>
-                  <h4>სახელი გვარი</h4>
-                  <p>პოზიცია</p>
-                  <a
-                    href="https://linkedin.com/in/example"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <img
-                      src="../assets/linkedIn-icon--blue.svg"
-                      alt="LinkedIn Icon"
-                    />LinkedIn
-                  </a>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article>
-                <img
-                  src="../assets/about-project-page/member.jpg"
-                  alt="Team Member Photo"
-                />
-                <div>
-                  <h4>სახელი გვარი</h4>
-                  <p>პოზიცია</p>
-                  <a
-                    href="https://linkedin.com/in/example"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <img
-                      src="../assets/linkedIn-icon--blue.svg"
-                      alt="LinkedIn Icon"
-                    />LinkedIn
-                  </a>
-                </div>
-              </article>
-            </li>
-          </ul>
-        </div>
-      </section>
+        <section class="contacts-section">
+          <h2>საკონტაქტო ინფორმაცია</h2>
+          <div>
+            <ul>
+              <li>
+                <img src="../assets/phone-icon--blue.svg" alt="" />
+                <a href="tel:(+995-32)222-00-09">(+995 32) 222 00 09</a>
+              </li>
+              <li>
+                <img src="../assets/email-icon--blue.svg" alt="" />
+                <a href="mail:info@iliauni@edu.ge">info@iliauni@edu.ge</a>
+              </li>
+              <li>
+                <img src="../assets/location-icon--blue.svg" alt="" />
+                <a href="">ქაქუცა ჩოლოყაშვილის 3/5</a>
+              </li>
+              <li>
+                <img src="../assets/facebook-icon--blue.svg" alt="" />
+                <a href="">www.facebook.com/linki</a>
+              </li>
+            </ul>
+
+            <div class="iframe-div">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.6743431872987!2d44.7689237!3d41.7095394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40447332ce83ce27%3A0x88f10503a3a86e1d!2z4YOh4YOX4YOg4YOY4YOU4YOa4YOU4YOh4YOU4YOY4YOU4YOg4YOa4YOU4YOX4YOU4YOa4YOU4YOQ!5e0!3m2!1sen!2sge!4v1700000000000!5m2!1sen!2sge"
+                allowfullscreen
+                loading="lazy"
+              >
+              </iframe>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
