--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -221,7 +221,7 @@ button {
   src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-900-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-900-normal.woff) format("woff");
 }
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .container {
@@ -532,7 +532,7 @@ body {
 
 header {
   height: 96px;
-  background-color: #0077FF;
+  background-color: #0077ff;
 }
 @media (max-width: 1200px) {
   header {
@@ -609,7 +609,7 @@ header .header_wrapper .header_components .navigation nav li a {
   }
 }
 header .header_wrapper .header_components .navigation nav li .active-header {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 @media (max-width: 600px) {
   header .header_wrapper .header_components .navigation {
@@ -639,7 +639,7 @@ header .header_wrapper .burger_menu .line {
 }
 
 .footer-main-info {
-  background-color: #0077FF;
+  background-color: #0077ff;
   color: white;
   font-size: 18px;
   font-weight: 700;
@@ -967,7 +967,7 @@ header .header_wrapper .burger_menu .line {
 }
 
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 main {
@@ -988,7 +988,7 @@ main .error-message h1 {
   font-size: 3rem;
 }
 main .error-message p {
-  color: #0468DC;
+  color: #0468dc;
   font-family: FiraGo700;
   font-size: 1.5rem;
   text-decoration-line: underline;
