--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -1,15 +1,14 @@
-
 //font
-$font-family: 'FiraGO', sans-serif;
+$font-family: "FiraGO", sans-serif;
 
 // colors
-$header-background: #0077FF;
-$nav-element-color: #FFFFFF60;
-$nav-element-color-active: #FFFFFF;
+$header-background: #0077ff;
+$nav-element-color: #ffffff60;
+$nav-element-color-active: #ffffff;
 $dark-blue-color: #022859;
-$body-background-color: #F5F5F5
+$body-background-color: #f5f5f5;
 $error-page-h1: #022859;
-$error-page-p: #0468DC;
+$error-page-p: #0468dc;
 $card-title: #333333;
 
 // resolution
