--- a/styles/page/_about-project.scss
+++ b/styles/page/_about-project.scss
@@ -2,7 +2,7 @@ $header-blue: #0468dc;
 $text-color: #333333;
 
 .main-content-wrapper {
-  margin-top: 54px;
+  margin-top: 64px;
 }
 
 .about-main {
@@ -11,11 +11,11 @@ $text-color: #333333;
   } //np need for overlay anymore
 
   section {
-    margin-bottom: 144px;
+    margin-bottom: 40px;
   }
 
   h2 {
-    margin-bottom: 40px;
+    margin-bottom: 16px;
     @include text_font_style($header-blue, inherit, 40px, bold);
   }
 
@@ -25,8 +25,7 @@ $text-color: #333333;
     line-height: 1.5;
   }
 
-  .about-project-section article > p:last-child,
-  .funds-section article > p:last-child {
+  .about-project-section article > p:last-child {
     margin-top: 45px;
   } //space between last <p> and previous one in articles
 
@@ -36,40 +35,45 @@ $text-color: #333333;
     gap: 20px;
   }
 
-  .contacts-section > div {
-    display: grid;
-    grid-template-columns: 45fr 55fr;
+  .contacts-section {
+    margin-bottom: 64px;
 
-    ul {
-      @include flex(space-around, baseline);
-      flex-direction: column;
-      padding: 30px 0;
+    & > div {
+      display: grid;
+      grid-template-columns: 45fr 55fr;
 
-      li {
-        @include flex();
-        gap: 16px;
+      ul {
+        @include flex(space-around, baseline);
+        flex-direction: column;
+        padding: 30px 0;
 
-        a {
-          @include text_font_style($text-color, inherit, 22px, 500);
+        li {
+          @include flex();
+          gap: 16px;
+
+          a {
+            @include text_font_style($text-color, inherit, 22px, 500);
+          }
+        }
+
+        img {
+          width: 40px;
+          aspect-ratio: 1;
         }
       }
 
-      img {
-        width: 27px;
+      .iframe-div {
+        display: flex;
+      } // stretching to 100%
+
+      iframe {
+        flex: 1; // stretching to 100%
+        width: 100%;
+        height: 288px;
+
+        border-radius: 10px;
+        border: 2px solid #0468dc;
       }
-    }
-
-    .iframe-div {
-      display: flex;
-    } // stretching to 100%
-
-    iframe {
-      flex: 1; // stretching to 100%
-      width: 100%;
-      height: 288px;
-
-      border-radius: 10px;
-      border: 2px solid #0468dc;
     }
   }
 }
