--- a/view/about-project.html
+++ b/view/about-project.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="უნილაბის გუნდი" />
 
-    <link rel="stylesheet" href="../styles/css/global.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
 
     <title>Library</title>
   </head>
@@ -120,50 +120,39 @@
           </ul>
         </section>
 
-        <section class="funds-section">
-          <h2>ფონდები</h2>
-          <article>
-            <p>
-              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
-              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-              გამოუშვებდა უმძიმდა ფილტვებით. დავიჭირე ჰჩემობდა ნაბოძებ ხევში
-              სდუმდნენ ირგებდა ფილტვებით დავიჯერე, ოცნებამ, საწყალო გააკეთებინა.
-              უარჰყო საწყალო მქვია საბოლოოდ პაციფისტებსაც შენათ კვამლს
-              ავტოგრაფების ცხოველურის მოდისო მიუსაფარ მოღუნა ავისმომასწავებლად
-              ნანობდა. გაიფრენდნენ დავსთრგუნო დაყრდნობილი ილო ხიზნობა,
-              შევმძვრალვარ ირგვლივაც არჩილი დაიხრჩო ვვიფიქრებ გადმომხობოდა
-              ავისმომასწავებლად დასკვნით სდუმდნენ. ხიზნობა გამაცინოს
-              გადმომხობოდა მოდისო ვერსი ირგვლივაც. ჰჩემობდა მოდისო ყველაფერიო
-              რომანის ავტოგრაფების ესთეტიკურად კანს ვაჟკაცები. ნაბოძებ ვაჟკაცები
-              გაშინებ ავტოგრაფების მოღუნა ხრეშს უარჰყო შენათვალი საწყალო
-              სდუმდნენ ყველაფერიო დაპირისპირებულმა.
-            </p>
-            <p>
-              ლორემ იპსუმ ნაბოძებ გვიკრძალავდნენ ესთეტიკურად მოღუნა დასკვნით
-              მქვია შევმძვრალვარ. საშვების ვახტანგს ორვეს, მიმზიდველ ქართულადო
-              გამოუშვებდა უმძიმდა ფილტვებით.
-            </p>
-          </article>
-        </section>
-
         <section class="contacts-section">
           <h2>საკონტაქტო ინფორმაცია</h2>
           <div>
             <ul>
               <li>
-                <img src="../assets/phone-icon--blue.svg" alt="" />
+                <img src="../assets/phone-icon--blue.svg" alt="phone icon" />
                 <a href="tel:(+995-32)222-00-09">(+995 32) 222 00 09</a>
               </li>
               <li>
-                <img src="../assets/email-icon--blue.svg" alt="" />
-                <a href="mail:info@iliauni@edu.ge">info@iliauni@edu.ge</a>
+                <img
+                  id="css-email"
+                  src="../assets/email-icon--blue.svg"
+                  alt="email icon"
+                />
+                <a href="mailto:info@iliauni@edu.ge">info@iliauni@edu.ge</a>
               </li>
               <li>
-                <img src="../assets/location-icon--blue.svg" alt="" />
-                <a href="">ქაქუცა ჩოლოყაშვილის 3/5</a>
+                <img
+                  src="../assets/location-icon--blue.svg"
+                  alt="location icon"
+                />
+                <a
+                  href="https://www.google.com/maps/place/%E1%83%98%E1%83%9A%E1%83%98%E1%83%90%E1%83%A1+%E1%83%A1%E1%83%90%E1%83%AE%E1%83%94%E1%83%9A%E1%83%9B%E1%83%AC%E1%83%98%E1%83%A4%E1%83%9D+%E1%83%A3%E1%83%9C%E1%83%98%E1%83%95%E1%83%94%E1%83%A0%E1%83%A1%E1%83%98%E1%83%A2%E1%83%94%E1%83%A2%E1%83%98/@41.7085521,44.7691021,17z/data=!4m6!3m5!1s0x40447332ce83ce27:0x88f10503a3a86e1d!8m2!3d41.7088973!4d44.7708867!16s%2Fm%2F02pmq51?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >ქაქუცა ჩოლოყაშვილის 3/5</a
+                >
               </li>
               <li>
-                <img src="../assets/facebook-icon--blue.svg" alt="" />
+                <img
+                  src="../assets/facebook-icon--blue.svg"
+                  alt="facebook icon"
+                />
                 <a href="">www.facebook.com/linki</a>
               </li>
             </ul>
@@ -173,6 +162,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.6743431872987!2d44.7689237!3d41.7095394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40447332ce83ce27%3A0x88f10503a3a86e1d!2z4YOh4YOX4YOg4YOY4YOU4YOa4YOU4YOh4YOU4YOY4YOU4YOg4YOa4YOU4YOX4YOU4YOa4YOU4YOQ!5e0!3m2!1sen!2sge!4v1700000000000!5m2!1sen!2sge"
                 allowfullscreen
                 loading="lazy"
+                title="ილიას სახელმწიფო უნივერსიტეტის ადგილმდებარეობა"
               >
               </iframe>
             </div>
