--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -299,17 +299,37 @@ body{
             }
           }
   
-          .title-share{
-            display: flex;
-            align-items: center;  
-            justify-content: space-between;
+          .title-share{ 
             background-color: white;
             padding: 12px 12px 16px;
 
-            h2{
-              font-family: FiraGo600;
-              color: $card-title;
-              font-size: 1rem;
+            .title-share-default{
+              display: flex;
+              justify-content: space-between;
+
+              h2{
+                font-family: FiraGo600;
+                color: $card-title;
+                font-size: 1rem;
+              }
+            }
+
+            .title-share-hover{
+              padding-top: 4px;
+              display: none;
+
+              p{
+                color: #3C3C4399;
+                font-family: FiraGo400;
+                font-size: 0.75rem;
+                padding: 4px 0 12px;
+              }
+
+              span{
+                color: #3C3C4399;
+                font-family: FiraGo400;
+                font-size: 0.75rem;
+              }
             }
           }
         }
