--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -466,16 +466,32 @@ body {
   font-size: 1rem;
 }
 .main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: white;
   padding: 12px 12px 16px;
 }
-.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share h2 {
+.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-default {
+  display: flex;
+  justify-content: space-between;
+}
+.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-default h2 {
   font-family: FiraGo600;
   color: #333333;
   font-size: 1rem;
+}
+.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-hover {
+  padding-top: 4px;
+  display: none;
+}
+.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-hover p {
+  color: rgba(60, 60, 67, 0.6);
+  font-family: FiraGo400;
+  font-size: 0.75rem;
+  padding: 4px 0 12px;
+}
+.main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share .title-share-hover span {
+  color: rgba(60, 60, 67, 0.6);
+  font-family: FiraGo400;
+  font-size: 0.75rem;
 }
 .main-content-wrapper .pagination-container {
   display: flex;
